wrap bug fix

--- a/ya/blocks/header.css
+++ b/ya/blocks/header.css
@@ -184,6 +184,7 @@
         font-size: 36px;
         line-height: 40px;
         text-wrap: nowrap;
+        white-space: nowrap;
     }
 
     .header__title-item_text-align_center {
